# smilPyQtGui

./: .gitignore  LICENSE  README.md  demo.py  globals.py  huge.py  main.py  pyproject.toml  requirements.txt  smilMainWindow.py  smilPyQtDlog.py  smilPyQtGui.py  smilPyQtTools.py  smilPyQtView.py  smilQtGui.py
doc/: TODO.txt  TOREMEMBER.txt  history.txt
scratch/: qwt-ex.py  top-bottom.py
src/smilPyQtGui/: __init__.py  __init__.py.1-ok  __init__.py.3-ko  __init__.py.4-ko  __init__.py.5-ok  smilPyQtDlog.py  smilPyQtMain.py  smilPyQtView.py
tests/: README.md  demo.py  huge.py  launch-demo.sh  single-image.py
